Fix problem: the  table of request summary overflowed when uri is very long

--- a/VeryNginx/dashboard/css/webInterface.css
+++ b/VeryNginx/dashboard/css/webInterface.css
@@ -251,3 +251,7 @@
     font-weight: normal;
     color: #777;
 }
+
+.summary_url_table td {
+    word-break: break-word;
+}
